data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_478.wast
;; 9. **Test Description**: Set up a `loop` with multiple `if-else` structures inside and respective `br` instructions. The loop must exit upon satisfying certain conditions evaluated by a `br_if`. Ensure nested conditions are met to exit cleanly.    **Constraint**: Checks correct nesting constraints and stack polymorphism handling.    **Relation to Infinite Loops**: Improper nesting or stack handling can cause conditions never to be met correctly, keeping the loop running indefinitely.

(assert_invalid
  (module
    (func (result i32)
      (loop (result i32)
        (i32.const 1)
        (if (result i32)
          (then
            (i32.const 0)
            (br_if 0 (i32.const 1))
            (i32.const 0)
          )
          (else
            (i32.const 2)
            (if (result i32)
              (then
                (br 1)
              )
              (else
                (br 0)
              )
            )
          )
        )
      )
    )
  )
  "type mismatch"
)